# pySCF

./: LICENSE  README.md  README.rst  environment.yml  setup.cfg  setup.py
scf/: __init__.py  acceleration.pxd  acceleration.pyx  core.py  core.pyx  log.py  progenitor.pxd  progenitor.pyx  scf.pyx  setup_package.py  structs.pxd  visualization.py
scf/src/: helpers.c  helpers.h  indexx.c  leapfrog.c  scf.c  scf.h  structs.h
scf/tests/: helpers.pyx  setup_package.py  test_core.py  test_scf_c.py
scf/tests/data/: SCFBI  accp_bfe.txt  accp_firstc.txt  plm.txt  posvel_one_step.txt  posvel_tidal_start_end.txt  sincossum.txt  ultrasp.txt  vel_after_init.txt
