[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = scf
description = Self-Consistent Field N-body code
long_description = A Python+Cython port of the SCF N-body code.
author = Adrian Price-Whelan
author_email = adrn@astro.columbia.edu
license = MIT
url = http://github.com/adrn/pySCF
edit_on_github = False
github_project = adrn/pySCF

[entry_points]
astropy-package-template-example = packagename.example_mod:main