[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = scf
description = Self-Consistent Field N-body code
long_description = A Python+Cython port of the SCF N-body code.
author = Adrian Price-Whelan
author_email = adrn@astro.princeton.edu
license = MIT
url = http://github.com/adrn/pyscf
edit_on_github = False
github_project = adrn/pySCF
install_requires = astropy, scipy, cython, cythongsl, h5py

# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.1.dev
minimum_python_version = 3.5

[entry_points]
